# DuckChase

./: .clang-format  .gitignore  AnimFrameTool  AnimFrameTool.¶  AnimFrameTool_gcc  AnimFrameTool_gcc.lha  AnimFrameTool_stormc  Collision_test_ui  DuckChase.¶  DuckChase_gcc  DuckChase_stormc  README.md  SoundPlayer_test_shell  aaa-test.iff  aaa-test_out.iff  amos_test-out.abk  colors.txt  gondola_empty.ilbm  gondola_empty_out.ilbm  gondola_empty_out_out.ilbm  jumpman_run_left_strip4_out.iff  mask-wolf-interleaved-new-alg.txt  mask-wolf-interleaved-new-new-alg-behavior.txt  mask-wolf-interleaved-new-new-alg.txt  mask-wolf-interleaved.txt  mask-wolf-planar.txt
amiga/src-cpp/src/: CMakeLists.txt  DuckChase  DuckChase.¶  Game.cpp  Game.h  GameColors.cpp  GameColors.h  PointsDisplay.cpp  main.cpp
amiga/src-cpp/src/_tests/: DuckChase_boost_tests.cpp  amiga_types.h
amiga/src-cpp/src/_tests_amiga/: Collision_test_ui.cpp  SoundPlayer_test_shell.cpp  Tests
amiga/src-cpp/src/_tool_anim_frame_adjust/: AnimFrameTool.cpp  AnimFrameTool.h
amiga/src-cpp/src/amigautils/: Picture.cpp  StopWatch.cpp  StopWatch.h
amiga/src-cpp/src/anim/: AnimSeqBase.cpp  AnimSeqBase.h  AnimSeqBitmap.cpp  AnimSeqBitmap.h  AnimSeqExtSprite.cpp  AnimSeqExtSprite.h  AnimSeqGels.cpp  AnimSeqGels.h  AnimSeqGelsBob.cpp  AnimSeqGelsBob.h  AnimSeqGelsVSprite.cpp  AnimSeqGelsVSprite.h  Animator.h  ShadowMask.cpp  ShadowMask.h
amiga/src-cpp/src/animtools/: AnimSeqBase.cpp  AnimSeqBase.h  AnimSeqBob.cpp  AnimSeqBob.h  AnimSeqSprite.cpp  AnimSeqSprite.h  ShapeBase.cpp  ShapeBase.h  ShapeBob.cpp  ShapeBob.h  ShapeSprite.cpp  ShapeSprite.h  animtools_proto.h
amiga/src-cpp/src/entities/: Arrow.cpp  Arrow.cpp.old  Arrow.h  ArrowGfxResources.cpp  ArrowResources.cpp  BrownBarrel.cpp  BrownBarrel.h  Bullet.cpp  Bullet.h  Duck.cpp  Duck.h  DuckGfxResources.h  DuckResources.cpp  EntityBase.cpp  EntityBase.h  EntityCollection.cpp  EntityCollection.h  Hunter.cpp  Hunter.h  HunterResources.h  Jumpman.cpp  Jumpman.h
amiga/src-cpp/src/game/: Game.cpp  Game.cpp.old  Game.h  GameColors.cpp  GameColors.h  GameTile.cpp  GameTile.h  GameVars.cpp  GameVars.h  GameWorld.cpp  GameWorld.h  InfoDisplay.cpp  InfoDisplay.cpp.old  InfoDisplay.h  Level01.cpp  Level01.h  PointsDisplay.cpp  PointsDisplay.h
amiga/src-cpp/src/gameengine/: EntityBob.cpp  EntityBob.h  EntitySprite.cpp  EntitySprite.h  GameViewGfxLib.cpp  GameViewGfxLib.h  GameViewIntui.cpp  GameViewIntui.h  GameViewIntui20.cpp  GameViewIntui20.h  GameViewLowLevel.cpp  GameViewLowLevel.h  IGameView.h  ShapeBase.cpp  ShapeBase.h  ShapeBob.cpp  ShapeBob.h  ShapeSprite.cpp  ShapeSprite.h
amiga/src-cpp/src/gfx/: arrow_palette2.raw  barrel_bn_roll_down_strip2.ilbm  barrel_bn_roll_down_strip2_4col.ilbm  barrel_bn_roll_right_strip4.ilbm  barrel_bn_roll_right_strip4_4col.ilbm  jumpman_climb1_strip2.ilbm  jumpman_climb2_strip4.ilbm  jumpman_run_left_strip4.ilbm  jumpman_run_right_strip4.ilbm  screen_m25.ilbm
amiga/src-cpp/src/gfxtools/: AnimSeqBase.cpp  AnimSeqBase.h  AnimSeqBob.cpp  AnimSeqBob.h  AnimSeqBobData.cpp  AnimSeqBobData.h  AnimSeqSprite.cpp  AnimSeqSpriteData.cpp  ImgLoaderBase.cpp  ImgLoaderBase.h  ImgLoaderRawBitMap.cpp  ImgLoaderRawBitMap.h  ImgLoaderRawPure.cpp  ImgLoaderRawPure.h
amiga/src-cpp/src/iff/: IffParse.cpp  IffParse.h
amiga/src-cpp/src/lowlevelview/: lowlevelview.cpp  lowlevelview.h  lowlevelviewport.cpp  lowlevelviewport.h
amiga/src-cpp/src/picture/: BitMapPictureBase.cpp  BitMapPictureBase.h  BitmapPictureBase.cpp  BitmapPictureBase.h  IlbmBitMap.cpp  IlbmBitMap.h  IlbmBitmap.cpp  IlbmBitmap.h  ImageDataPicture.cpp  ImageDataPicture.h  PictureBase.cpp  PictureBase.h  RawBitMap.cpp  RawBitMap.h  RawBitmap.cpp
amiga/src-cpp/src/resources/: ArrowResources.cpp  ArrowResources.h  BrownBarrelResources.cpp  BrownBarrelResources.h  DuckResources.cpp  DuckResources.h  GfxResourceBase.h  HunterResources.cpp  HunterResources.h  JumpmanResources.cpp  (+3 more)
src/: CMakeLists.txt  main.cpp
src/_tests/: DuckChase_boost_tests.cpp  DuckChase_boost_tests.pro
src/_tests_amiga/: Tests.¶
src/_tool_anim_frame_adjust/: AnimFrameTool  AnimFrameTool.ReadMe.md  AnimFrameTool.RoughIdea.txt  AnimFrameTool.TODO.md  AnimFrameTool.cpp  AnimFrameTool.h  AnimFrameTool.¶  AnimSheetContainer.cpp  AnimSheetContainer.h  AslFileRequest.cpp  AslFileRequest.h  BitMapTools.cpp  BitMapTools.h  ChunkyPixelArray.cpp  ChunkyPixelArray.h  MessageBox.cpp  MessageBox.h  OpenAmosAbk.cpp  OpenAmosAbk.h  PictureProcessing.cpp  PictureProcessing.h  PixelArray.cpp  PixelArray.h  SaveAmosAbk.cpp  SaveAmosAbk.h  SheetItemNode.h  main.cpp
src/amigautils/: StopWatch.cpp
src/anim/: AnimSeqBitmap.cpp  AnimSeqExtSprite.cpp  AnimSeqExtSprite.h  AnimSeqGels.cpp  AnimSeqGels.h  AnimSeqGelsBob.cpp  AnimSeqGelsVSprite.cpp  AnimSeqGelsVSprite.h  ShadowMask.cpp  ShadowMask.h  ShadowMaskInterleaved.cpp  ShadowMaskInterleaved.h
src/entities/: Arrow.cpp  Arrow.h  ArrowGfxResources.h  Duck.h  DuckGfxResources.cpp  EntityBase.cpp  Hunter.cpp  HunterGfxResources.cpp  HunterGfxResources.h
src/game/: Game.cpp  GameColors.h  GameTile.cpp  GameVars.cpp  InfoDisplay.h  Level01.cpp  Level01.h
src/iff/: IffParse.cpp  IffParse.h
src/picture/: BitMapPictureBase.cpp  BitMapPictureBase.h  BitmapPictureBase.cpp  BitmapPictureBase.h  IlbmBitmap.cpp  IlbmBitmap.h  OpenIlbmPictureBitMap.cpp  OpenIlbmPictureBitMap.h  OpenImageDataPicture.cpp  OpenImageDataPicture.h  OpenRawPictureBitMap.cpp  OpenRawPictureBitMap.h  PictureBase.cpp  RawBitmap.h  SaveBitMapPictureIlbm.cpp  SaveBitMapPictureIlbm.h
src/resources/: GfxResourceExtSprite.h  GfxResourceGELs.h
src/shapes/: GelsLayer.cpp  GelsLayer.h  Rect.cpp  Rect.h  ShapeBase.cpp  ShapeBase.h  ShapeBob.cpp  ShapeBob.h  ShapeExtSprite.cpp  ShapeExtSprite.h  ShapeVSprite.cpp  ShapeVSprite.h
src/sound/: Octave.h  SoundPlayer.h  Soundfile8SVX.cpp  Soundfile8SVX.h
src/view/: GameViewBase.cpp  GameViewBase.h  GameViewDBuf.cpp  GameViewDBuf.h  GameViewIntui.cpp  GameViewIntui.h  GameViewLowLevel.cpp  GameViewLowLevel.h  lowlevelview.cpp  lowlevelview.h  lowlevelviewport.h
(+330 files in other folders)
